selfhost/test/typechecker/enumdecl/error_duplicate_enum_enum.out
Error at %FILE_NAME%:2:6
Duplicate name 'Foo'
  |  enum Foo { Baz }
          ^
This name is also declared at (1:6)
  |  enum Foo { Bar }
          ^
