selfhost/test/typechecker/enumdecl/error_duplicate_enum_enum.abra
enum Foo { Bar }
enum Foo { Baz }